<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="?attr/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@mipmap/man"
            android:background="@drawable/outlines" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/DeviceSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DeviceConnect"
                android:layout_gravity="right"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/NamePan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="top"
                android:text="@string/Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/MailPan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/Guest"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>