<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button"
            android:layout_below="@+id/appbar">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/userPhoto"
                        android:layout_width="110dp"
                        android:layout_height="150dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="12dp"
                        android:scaleType="fitXY"
                        android:background="@mipmap/man"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/userFirstName"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:singleLine="true"
                                android:hint="@string/FirstName"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/userLastName"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:singleLine="true"
                                android:hint="@string/LastName"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/userEmail"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:singleLine="true"
                            android:hint="@string/ID"/>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PwdChange"
                        android:id="@+id/Pwd_Change"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/UserIdDelete"/>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/darkblue"
            android:text="@string/Save"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
